Update to design (mostly CSS); backup before code cleanup

--- a/index.html
+++ b/index.html
@@ -116,16 +116,16 @@
                             </thead>
                             <tbody>
                                 <tr>
-                                    <td>Partner One</td>
-                                    <td>Role in Projetc</td>
+                                    <td class="table-left">Partner One</td>
+                                    <td class="table-right">Role in Projetc</td>
                                 </tr>
                                 <tr>
-                                    <td>Partner Two</td>
-                                    <td>Role in Project</td>
+                                    <td class="table-left">Partner Two</td>
+                                    <td class="table-right">Role in Project</td>
                                 </tr>
                                 <tr>
-                                    <td>Partner Three</td>
-                                    <td>And their Role</td>
+                                    <td class="table-left">Partner Three</td>
+                                    <td class="table-right">And their Role</td>
                                 </tr>
                             </tbody>
                         </table>
@@ -137,20 +137,20 @@
                             </thead>
                             <tbody>
                                 <tr>
-                                    <td>Investment Measure:</td>
-                                    <td>150,000,000.00 EUR</td>
+                                    <td class="table-left table-imp">Investment Measure:</td>
+                                    <td class="table-right table-imp">150,000,000.00 EUR</td>
                                 </tr>
                                 <tr>
-                                    <td>Accompanying Measure: </td>
-                                    <td>2,800,000.00 EUR</td>
+                                    <td class="table-left table-nimp">Accompanying Measure: </td>
+                                    <td class="table-right table-nimp">2,800,000.00 EUR</td>
                                 </tr>
                                 <tr>
-                                    <td>Grants: </td>
-                                    <td>0.00 EUR</td>
+                                    <td class="table-left table-imp">Grants: </td>
+                                    <td class="table-right table-imp">0.00 EUR</td>
                                 </tr>
                                 <tr>
-                                    <td>SBF:</td>
-                                    <td>25,983.15 EUR</td>
+                                    <td class="table-left table-nimp">SBF:</td>
+                                    <td class="table-right table-nimp">25,983.15 EUR</td>
                                 </tr>
                             </tbody>
                         </table>
@@ -161,6 +161,7 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                 </div>
             </section>
+            <section class="teamcalendar"></section>
         </main>
         <footer></footer>
     </body>
