--- a/index.html
+++ b/index.html
@@ -2,71 +2,69 @@
 <html>
     <head>
         <meta charset="UTF-8"/>
-        <title>JPro - The LEb3 Portfolio Viewer</title>
+        <title>Team Dashboard</title>
         <link href="./resources/css/style.css" type="text/css" rel="stylesheet"/>
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Quicksand:wght@300;400;500;600;700&family=Ubuntu:wght@300;400;700&display=swap" rel="stylesheet">
+        <script src="./resources/javascript/objects.js" async></script>
+        <script src="./resources/javascript/eventListeners.js" defer></script>
+        <script src="./resources/javascript/script.js" defer></script>
     </head>
     <body>
         <div class="sidenav">
             <h1>Boards</h1>
             <ul> 
-                <a href="#"><li>Team Calendar</li></a>
-                <a href="#"><li>Team Stats</li></a>
-                <a href="#"><li>Project Viewer</li></a>
+                <a href="#"><li id="open-teamcalendar">Team Calendar</li></a>
+                <a id="open-teamstats" href="#"><li>Team Stats</li></a>
+                <a id="open-pviewer" href="#"><li>Project Viewer</li></a>
             </ul>
             <br/>
             <h2>Filter Settings</h2>
             <div class="nav-filters">
                 <label>Country: </label>
-            <select>
-                <option>All</option>
-                <option>India</option>
-                <option>Bangladesh</option>
-                <option>Sri Lanka</option>
-                <option>Nepal</option>
+            <select id="countryfilter">
             </select>
             </div>
             <br>
             <div class="nav-filters">
                 <label>Sector Team:<br/></label>
-                <select>
-                    <option>All</option>
-                    <option>Mobility</option>
-                    <option>Energy Efficiency</option>
-                    <option>NaWi</option>
-                    <option>Others</option>
+                <select id="sectorfilter">
                 </select>
                 <br>
             </div>
             <div class="nav-filters">
                 <label>Project:<br/></label>
-                <select>
-                    <option>All</option>
-                    <option>Projekt I</option>
-                    <option>Project II</option>
-                    <option>Project III</option>
-                    <option>Project IV</option>
+                <select id="projectfilter">
                 </select>
                 <br/>
             </div>
+            <!--
             <div class="nav-filters">
                 <label>Date Range:</label>
                 <input type="date"/>
                 <input type="date"/>
             </div>
+            -->
         </div>
         <main>
             <section class="header-bar">
                 <span>Welcome to the Team Dashboard</span>
             </section>
+            <section class="welcomepage">
+                <div class="infocard" id="welcomecard">
+                    <h1>Welcome</h1>
+                    <h2>to the</h2>
+                    <h1>Team Dashboard</h1>
+                    <p></p>
+                </div>
+            </section>
             <section class="pviewer">
-                <div class="pv-generalinfo">
-                    <div id="pv-title">
-                        <h1 class = "secdescription-h1">Projekttitel - mal länger, mal kürzer</h1>
+                <div class="infocard" id="pv-1-generalinfo">
+                    <div class="infocard-title" id="pv-title">
+                        <h1>Projekttitel - mal länger, mal kürzer</h1>
                         <h2>Project Title- at times longer, then shorter</h2>
                     </div>
-                    <div id="pv-info">
+                    <div id="pv-infotables">
                         <table id="projectids">
                             <thead>
                                 <tr>
@@ -156,12 +154,50 @@
                         </table>
                     </div>
                 </div>
-                <div id="pv-intro">
-                    <h1 class="secdescription-h1">Project Description</h1>
+                <div class ="infocard" id="pv-intro">
+                    <h1 class="infocard-title">Project Description</h1>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                 </div>
             </section>
-            <section class="teamcalendar"></section>
+            <section class="teamcalendar">
+                <div class="infocard">
+                    <h1 class="infocard-title">Past and Present Team Portfolio Events</h1>
+                    <br/>
+                    <div class="two-column-spacearound">
+                        <div class="diplaytimerange">
+                        <h2>From</h2>
+                        <h3>Date 1</h3>
+                    </div>
+                    <div class="diplaytimerange">
+                        <h2>To</h2>
+                        <h3>Date 1</h3>
+                    </div>
+                </div>
+                <br/>
+                <div class="calendar-table">
+                    <table>
+                        <thead>
+                            <tr>
+                                <th>Project</th>
+                                <th>Team</th>
+                                <th>Country</th>
+                                <th>Event</th>
+                                <th>Date</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>PROJECT1</td>
+                                <td>TEAM1</td>
+                                <td>COUNTRY1</td>
+                                <td>EVENT1</td>
+                                <td>DATE1</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+                </div>
+            </section>
         </main>
         <footer></footer>
     </body>
