--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link href="./resources/css/style.css" type="text/css" rel="stylesheet"/>
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Quicksand:wght@300;400;500;600;700&family=Ubuntu:wght@300;400;700&display=swap" rel="stylesheet">
-        <script src="./resources/javascript/objects.js" async></script>
+        <script src="./resources/javascript/objects.js" defer></script>
         <script src="./resources/javascript/eventListeners.js" defer></script>
         <script src="./resources/javascript/script.js" defer></script>
     </head>
